--- a/src/components/NavBar.module.css
+++ b/src/components/NavBar.module.css
@@ -1,6 +1,9 @@
 .navbar {
-  height: 5rem;
-  background-color: rgb(34, 12, 84);
+  height: 3rem;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  background-color: rgb(17, 8, 100);
 }
 
 .navbar nav {
