--- a/src/components/Movies.css
+++ b/src/components/Movies.css
@@ -7,7 +7,7 @@
   padding: 1rem;
 }
 
-.movie-card {
+.movie-click {
   width: 250px;
   background-color: #ffffff;
   border-radius: 8px;
@@ -36,4 +36,41 @@ h5 {
 .search-container {
   margin-top: 20px;
   margin-left: 70%;
+}
+
+.movie-click {
+  transition: transform 0.3s;
+}
+
+.movie-click:hover {
+  transform: scale(1.05);
+  z-index: 10;
+}
+
+.movie-click:hover {
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.favourite {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  color: white;
+  transition: opacity 0.3s ease;
+  border-radius: 8px;
+}
+
+.image-container {
+  position: relative;
+}
+
+.image-container:hover .favourite {
+  opacity: 1;
 }
