Create movies modal

--- a/src/components/Movies.css
+++ b/src/components/Movies.css
@@ -74,3 +74,50 @@ h5 {
 .image-container:hover .favourite {
   opacity: 1;
 }
+
+.movies-modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.movies-modal {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.text {
+  margin-left: 40px;
+  text-align: left;
+}
+
+.close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: transparent;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.movies-modal h3 {
+  margin: 10px 0;
+}
+
+.movies-modal p {
+  font-size: 14px;
+  color: #555;
+}
