--- a/src/components/Movies.css
+++ b/src/components/Movies.css
@@ -13,7 +13,14 @@
   border-radius: 8px;
   padding: 0.5rem;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s;
   text-align: center;
+}
+
+.movie-click:hover {
+  transform: scale(1.05);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  z-index: 10;
 }
 
 .movie-poster {
@@ -38,41 +45,18 @@ h5 {
   margin-left: 70%;
 }
 
-.movie-click {
-  transition: transform 0.3s;
-}
-
-.movie-click:hover {
-  transform: scale(1.05);
-  z-index: 10;
-}
-
-.movie-click:hover {
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-}
-
 .favourite {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  opacity: 0;
-  color: white;
-  transition: opacity 0.3s ease;
-  border-radius: 8px;
+  bottom: -30px;
+  left: 10px;
+  background-color: transparent;
+  opacity: 1;
+  color: black;
+  z-index: 2;
 }
 
 .image-container {
   position: relative;
-}
-
-.image-container:hover .favourite {
-  opacity: 1;
 }
 
 .movies-modal-overlay {
